<resources>

    <string name="test">这是一个测试。。</string>
    
    <string name="app_name">九邦信投网</string>
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_confirm">确定</string>
    <string name="back">返回</string>
    <string name="index">首页</string>
    <string name="product">投资</string>
    <string name="account">我的</string>
    <string name="more">更多</string>
    <string name="signin">登录</string>
    <string name="signout">退出登录</string>
    <string name="signup">注册</string>
    <string name="charge">充值</string>
    <string name="charge_hint">0元&lt;充值金额&lt;1000万元</string>
    <string name="cash">提现</string>
    <string name="confirm">确定</string>
    <string name="copyright">版权所有：上海盐商网络科技有限公司</string>
    
    <string name="item_product_gain">预计年化收益率</string>
    <string name="item_product_deadline">投资时限</string>
    
    <string name="sign_tel_hint">请输入手机号</string>
    <string name="sign_tel_verify_hint">短信验证码</string>
    <string name="sign_pwd_hint">登录密码</string>
    <string name="sign_up_pwd_hint">8-20位字母、数字和符号的组合</string>
    <string name="sign_confirm_pwd_hint">请重复输入密码</string>
    <string name="sign_verify_hint">输入验证码</string>
    <string name="sign_hint_err">输入的手机号和密码有误！</string>
    <string name="sign_hint">请先填写完整信息！</string>
    <string name="sign_lose"><u>忘记密码？</u></string>
    <string name="sign_signup">还没有账户？ <u>快速注册</u></string>
    <string name="sign_protocol"><u>注册协议</u></string>
    <string name="sign_code">点击获取</string>
    <string name="signup_code">请先输入11位电话号码。</string>
    <string name="signup_hascode">请先获取短信验证码！</string>
    <string name="signup_code_success">验证码发送成功，请注意查收。</string>
    
    <string name="account_gain">累计收益（元）</string>
    <string name="account_balance">账户余额</string>
    <string name="account_red">我的卡券</string>
    <string name="account_invest">回款计划</string>
    <string name="account_trans">交易记录</string>
    <string name="account_account">账户中心</string>
    
    <string name="account_username">设置用户名</string>
    <string name="account_email">未绑定邮箱</string>
    <string name="account_idcard">未身份认证</string>
    <string name="account_hand">启用手势密码</string>
    <string name="account_pwd">修改登录密码</string>
    <string name="username_hint">用户名输入</string>
    <string name="username_add">用户名设置成功后将不能够进行修改！</string>
    <string name="idcard_name">请输入真实姓名</string>
    <string name="idcard_id">请输入身份证号</string>
    <string name="idcard_hint">监管部门规定，购买理财产品需提供实名认证信息以确保信息安全。</string>
    <string name="pwd_old">请输入旧密码</string>
    <string name="pwd_new">请输入密码</string>
    <string name="pwd_confirm">确认输入新密码</string>
    <string name="email_hint">输入需要绑定邮箱</string>
    <string name="email_add">邮箱绑定后只能在PC网页进行修改!</string>
    <string name="coupon_expire">过期时间：</string>
    
    <string name="more_aboutus">关于九邦信投网</string>
    <string name="more_anno">平台公告</string>
    <string name="more_help">帮助中心</string>
    <string name="more_share">邀请好友</string>
    <string name="more_update">检测更新</string>
    <string name="more_comment">拨打客服电话</string>
    
    <string name="invest_protocol"><u>借款协议</u></string>
    <string name="invest_rate">预计年化收益率</string>
    <string name="invest_price">投资金额</string>
    <string name="invest_amount">还款本息</string>
    
    <string name="trans_pre">操作前金额</string>
    <string name="trans_price">操作金额</string>
    <string name="trans_balance">可用余额</string>
    
    <string name="charge_confirm">确认充值</string>
    <string name="cash_confirm">确认提现</string>
    
    <string name="tender_protocol">我同意《转让协议》《咨询服务协议》《保证合同》</string>
    <string name="title_activity_find_pwd">FindPwd</string>

    <string name="product_secu">本息担保</string>
    <string name="product_cond">100元起投</string>

    <string name="detail_assure">上海芝金资产管理有限公司成立于2010年，注册资本金为5000万，是一家资本实力雄厚、拥有专业人才的新型金融服务机构。公司拥有成熟的风险控制和完善的管理团队，并依托于国内大型集团的实力，对相关项目进行整体分析及风险评估，从中筛选优质客户。</string>
    <string name="product_ensure1">1. 项目推荐方线下尽调、审核、筛选优质资产。</string>
    <string name="product_ensure2">2. 转让项目方按照合同约定承诺回购。</string>
    <string name="product_ensure3">3. 芝金资产管理有限公司承诺对转让方回购进行履约担保，如转让方违约，担保方将对投资人本息进行全额代偿。</string>
    <string name="product_ensure4">4. 九邦信投网已设立风险保障金，如担保方违约，九邦信投网将对投资人本息进行全额偿付。</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_find_pwd_two">FindPwdTwoActivity</string>
    <string name="title_activity_normal_invite">NormalInviteActivity</string>
    <string name="title_activity_yan_invite">YanInviteActivity</string>
    <string name="title_activity_invite_list">InviteListActivity</string>
    <string name="title_activity_verify_pwd">VerifyPwd</string>
    <string name="tiyanjinshuoming">1.体验标（仅限体验金投资的标），只能使用体验金进行投资。\n2.首次投资体验标，产生收益会冻结，进行任意一笔现金投资才能解冻。\n3.已成功投资的体验金，会按项目年化计息产生收益。\n4.使用体验金投资时，体验标不得超过体验金个人购买上限。\n5.投资时，需要自行勾选体验金使用，系统不会自动抵扣。</string>
    <string name="hunhebiaoshuoming">1.混合标（可用现金和体验金投资的标），需满足对应使用金额及限制条件。\n2.已成功投资的体验金，会按项目年化计息产生收益，但不计入募集资金总额。\n3.使用体验金投资时，混合标不得超过体验金个人购买上限。\n4.投资时，需要自行勾选体验金使用，系统不会自动抵扣。</string>
    <string name="tiyanjin_red">1）投资使用体验金时，要满足两个条件：一是投资产品本身支持使用体验金；二是客户要满足对应体验金使用金额及期限的条件\n2）投资时，需要自行勾选体验金使用，系统不会自动抵扣</string>
    <string name="tiyanjinchoice">1）投资使用体验金时，要满足两个条件：\n一是投资产品本身支持使用体验金；二是客户要满足对应体验金使用金额及期限的条件\n2）投资时，需要自行勾选体验金使用，系统不会自动抵扣</string>
</resources>
