<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <!-- 显示头部标题 -->

    <LinearLayout
        android:id="@+id/headLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/header" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headLinear"
        android:orientation="vertical"
        android:paddingLeft="@dimen/page_left"
        android:paddingRight="@dimen/page_right"
        android:paddingTop="@dimen/page_top" >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:ems="10"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:hint="@string/username_hint"
            android:singleLine="true"
            android:textColor="@color/font_gray"
            android:textColorHint="@color/font_hint"
            android:textSize="@dimen/font_app" >

            <requestFocus />
        </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/app_line" />

        <TextView
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_line"
            android:gravity="center_horizontal"
            android:text="@string/username_add"
            android:textColor="#fd6e6e"
            android:textSize="@dimen/font_hint" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/page_line"
            android:background="@drawable/bg_blue"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/font_app" />
    </LinearLayout>

</RelativeLayout>