<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/close" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/page_left"
        android:paddingRight="@dimen/page_right"
        android:weightSum="5" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:src="@drawable/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp"
            android:layout_weight="3"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_tel_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="11"
                android:nextFocusForward="@+id/pwd"
                android:singleLine="true"
                android:textColor="@color/font_gray"
                android:textColorHint="@color/app_font_light"
                android:textSize="@dimen/font_hint_15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="16dp"
                android:background="@color/app_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_weight="8"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/sign_pwd_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:textColor="@color/font_gray"
                    android:textColorHint="@color/app_font_light"
                    android:textSize="@dimen/font_hint_15sp" />

                <ImageView
                    android:id="@+id/iv_sigin_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:src="@drawable/hide" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="16dp"
                android:background="@color/app_line" />

            <LinearLayout
                android:id="@+id/verify1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_line"
                android:orientation="horizontal"
                android:visibility="gone" >

                <EditText
                    android:id="@+id/et_verification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/sign_verify_hint"
                    android:paddingBottom="@dimen/text_line"
                    android:textColor="@color/font_gray"
                    android:textColorHint="@color/app_font_light"
                    android:textSize="@dimen/font_hint_15sp" />

                <ImageView
                    android:id="@+id/verifyimage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:scaleType="fitXY" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/verify2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/app_line" />
            </LinearLayout>

            <TextView
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_blue"
                android:gravity="center"
                android:text="@string/signin"
                android:textColor="@color/white"
                android:textSize="@dimen/font_app_18sp" />

            <TextView
                android:id="@+id/losepwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:gravity="right"
                android:text="@string/sign_lose"
                android:textColor="@color/app_blue"
                android:textSize="@dimen/font_app" />
        </LinearLayout>

        <TextView
            android:id="@+id/go_siginup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom"
            android:text="@string/sign_signup"
            android:textColor="@color/app_blue"
            android:textSize="@dimen/font_app" />
    </LinearLayout>

</LinearLayout>