<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <!-- 显示头部标题 -->

    <LinearLayout
        android:id="@+id/headLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/header" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headLinear"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="45dp" >

        <EditText
            android:id="@+id/pwd_old"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/page_line"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/pwd_old"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/font_gray"
            android:textColorHint="@color/font_hint"
            android:textSize="@dimen/font_app" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_line" />

        <EditText
            android:id="@+id/pwd_new"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/page_line"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/pwd_new"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/font_gray"
            android:textColorHint="@color/font_hint"
            android:textSize="@dimen/font_app" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_line" />

        <EditText
            android:id="@+id/pwd_confirm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/page_line"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/pwd_confirm"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/font_gray"
            android:textColorHint="@color/font_hint"
            android:textSize="@dimen/font_app" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_line" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_blue"
            android:gravity="center"
            android:text="提交"
            android:textColor="@color/white"
            android:textSize="@dimen/font_title" />
    </LinearLayout>

</RelativeLayout>