<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/headLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:src="@drawable/close" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/page_left"
        android:paddingRight="@dimen/page_right" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_gravity="center"
            android:src="@drawable/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_tel_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="11"
                android:nextFocusForward="@+id/pwd"
                android:singleLine="true"
                android:textColor="@color/font_gray"
                android:textColorHint="@color/app_font_light"
                android:textSize="@dimen/font_hint_15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/app_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/sign_up_pwd_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:nextFocusForward="@+id/pwdconfirm"
                    android:singleLine="true"
                    android:textColor="@color/font_gray"
                    android:textColorHint="@color/app_font_light"
                    android:textSize="@dimen/font_hint_15sp" />

                <ImageView
                    android:id="@+id/iv_siginup_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/hide" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/app_line" />

            <EditText
                android:id="@+id/pwdconfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_confirm_pwd_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/font_gray"
                android:textColorHint="@color/app_font_light"
                android:textSize="@dimen/font_hint_15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/app_line" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_blue"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="@dimen/font_app_18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="注册账户代表同意并接受九邦信投网的"
                    android:textColor="@color/font_gray"
                    android:textSize="@dimen/font_app" />

                <TextView
                    android:id="@+id/protocol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_protocol"
                    android:textColor="@color/app_blue"
                    android:textSize="@dimen/font_app" />
            </LinearLayout>

            <TextView
                android:id="@+id/go_sigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="已有账户? 请登录"
                android:textColor="@color/app_blue"
                android:textSize="@dimen/font_app" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>