<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <!-- 显示头部标题 -->

    <LinearLayout
        android:id="@+id/headLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/header" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headLinear"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="@dimen/page_top" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/page_line"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:src="@drawable/sign_tel" />

            <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:focusable="false"
                android:gravity="center_vertical"
                android:hint="@string/sign_tel_hint"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/font_gray"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_app" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:background="@color/app_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/page_line"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:src="@drawable/sign_pwd" />

            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_pwd_hint"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/font_gray"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_app" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:background="@color/app_line" />

        <LinearLayout
            android:id="@+id/verify1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/page_line"
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:visibility="visible" >

            <EditText
                android:id="@+id/verification"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_verify_hint"
                android:paddingLeft="10dp"
                android:textColor="@color/font_gray"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_app" />

            <ImageView
                android:id="@+id/verifyimage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:scaleType="fitXY" />
        </LinearLayout>

        <TextView
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_blue"
            android:gravity="center"
            android:text="提交验证"
            android:textColor="@color/white"
            android:textSize="@dimen/font_app" />
    </LinearLayout>

</RelativeLayout>